# korotohvost

./: .gitignore  MANUAL_SETUP.md  README.md  dune-project  korotohvost.opam
lib/: dune  expiration.ml  index_page.ml  short_url_mapper.ml  short_url_page.ml  url_mapper.ml  url_storage.ml
migrations/: base.sql
static/templates/: failed.mustache.html  index.mustache.html  not-found-short-url.mustache.html  short-url-result.mustache.html
